# Section contains information Cargo need to compile your program
[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Section to list any project dependencies. In Rust, packages of code are referred to as crates.
[dependencies]
